<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="452dp"
        android:layout_height="745dp"
        android:contentDescription="@string/imagem2"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lilas" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="103dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nome2"
        android:inputType="textPersonName"
        android:textColor="#6A09D8"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textPersonName"
        android:textColor="#6A09D8"
        android:textColorHint="#757575"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:hint="@string/responsavel"
        android:inputType="textPersonName"
        android:textColor="#6A09D8"
        android:textColorHint="#607D8B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:hint="@string/data"
        android:inputType="date"
        android:textColor="#6A09D8"
        android:textColorHint="#5C6BC0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName4" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="103dp"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="textPersonName"
        android:textColor="#6A09D8"
        android:textColorHint="#5C6BC0"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/switch1"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="277dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="44dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:textColor="#6A09D8"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="75dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/selecionar"
        android:inputType="textPersonName"
        android:textColor="#6A09D8"
        android:textColorHint="#7E57C2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName5" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="388dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="530dp" />

</androidx.constraintlayout.widget.ConstraintLayout>